# TransientX

./: .gitignore  .readthedocs.yaml  AUTHORS  Dockerfile  LICENSE  Makefile.am  README.md  bootstrap  config.h.in~  configure.ac
config/: ax_boost_base.m4  ax_check_x86_features.m4  ax_gcc_x86_cpu_supports.m4  erfa.m4  pgplot.m4  plotx.m4  sofa.m4  ymw16.m4
docs/: conf.py  index.rst  installation.rst  introduction.rst  pipeline.rst  usage.rst
docs/pipeline/: candidate_plotting.rst  clustering.rst  dedispersion.rst  matched_filtering.rst  preprocess.rst  rfi_mitigation.rst
docs/usage/: replot_fil.rst  transientx_fil.rst
examples/: dbdedispdb_config.json  dbfil.json  dbfiltooldb_config.json  dbsearch_config.json  ddplan.txt  transientx_config.json
include/: AVL.h  archivewriter_tx.h  avx2.h  baseline.h  boxcar.h  candidate.h  candplot.h  cluster.h  clustering.h  cn.h  constants.h  databuffer.h  dedisperse.h  downsample.h  equalize.h  fifo.h  filterbank.h  filterbankreader.h  hdu.h  histogram_analyzer.h  hough_transform.h  integration.h  kdtree.h  logging.h  matplotlibcpp.h  mjd.h  patch.h  preprocess.h  preprocesslite.h  psrdatareader.h  psrfits.h  psrfitsreader.h  rfi.h  ringbuffer.h  singlepulse.h  subdedispersion.h  utils.h
python/: ACCEL_sift_pulsarx.py
src/: Makefile.am
src/container/: AVL.cpp  Makefile.am  databuffer.cpp  fifo.cpp  kdtree.cpp
src/dada/: Makefile.am  dada_benchmarkdb.cpp  dada_dbdedispdb.cpp  dada_dbfil.cpp  dada_dbfiltooldb.cpp  dada_dbnull.cpp  dada_dbsearch.cpp  dada_dbtim.cpp  dada_fildb.cpp
src/formats/: Makefile.am  filterbank.cpp  hdu.cpp  integration.cpp  psrfits.cpp
src/module/: Makefile.am  archivewriter_tx.cpp  baseline.cpp  boxcar.cpp  candplot.cpp  cluster.cpp  downsample.cpp  equalize.cpp  filterbankreader.cpp  patch.cpp  preprocess.cpp  preprocesslite.cpp  psrfitsreader.cpp  rfi.cpp  subdedispersion.cpp
src/singlepulse/: Makefile.am  archivewriter_tx.cpp  boxcar.cpp  candidate.cpp  candplot.cpp  cluster.cpp  dedisperse.cpp  dedisperse_fil.cpp  replot_fil.cpp  singlepulse.cpp
src/slow_transient/: Makefile.am  extract_baseline.cpp  extract_source.cpp  histo.cpp  histof.cpp
src/utils/: Makefile.am  utils.cpp
src/ymw16/: Makefile.am  dmdtau.c  gum.c  localbubble.c  ne_crd.c  nps.c  spiral.c
