bin_PROGRAMS=histo histof extract_baseline extract_source

AM_CPPFLAGS=-I$(top_srcdir)/include
LDADD=-lboost_program_options -lboost_log -lxmodule -lxutils -lxcontainer -lxformats -lymw16

histo_SOURCES=histo.cpp
histof_SOURCES=histof.cpp
extract_baseline_SOURCES=extract_baseline.cpp
extract_source_SOURCES=extract_source.cpp
